Added buttons and footer with unordered list of links.

--- a/index.html
+++ b/index.html
@@ -36,9 +36,24 @@
 
             </header>
             <form id="search-bar">
-                <input type="text" name="text" class="search" placeholder="">
-                <input type="submit" name="submit" class="submit" value="Search">
+                <input type="text" name="text" class="search" placeholder="Search">
+                <br>
+                <input type="submit" name="submit" class="submit" value="Google Search">
+                <input type="submit" name="feeling-lucky" class="submit" value="I'm Feeling Lucky">
             </form>
+            <footer>
+                <ul>
+                    <li><a href="#Advertising">Advertising</a></li>
+                    <li><a href="#Business">Business</a> </li>
+                    <li><a href="#How-Search-Works">How Search works</a> </li>
+                    <li><a href="#Carbon-Neutral">Carbon neutral since 2007</a> </li>
+                    <li><a href="#Privacy">Privacy</a> </li>
+                    <li><a href="#Terms">Terms</a> </li>
+                    <li><a href="#Settings">Settings</a> </li>
+                </ul>
+            </footer>
         </div>
+
+    </div>
     </div>
 </body>
