Edited search bar.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         alt="Google Logo" />
 
                 </header>
-                <form id="search-bar">
+                <form id="form-group">
                     <input type="text" name="text" class="search" placeholder="Search">
                     <br>
                     <input type="submit" name="submit" class="submit" value="Google Search">
