edited nav-bar and footer

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <input type="submit" name="feeling-lucky" class="submit" value="I'm Feeling Lucky">
             </form>
         </div>
-        <footer id="footer">
-            <ul>
+        <footer>
+            <ul id="footer">
                 <li><a href="#Advertising">Advertising</a></li>
                 <li><a href="#Business">Business</a> </li>
                 <li><a href="#How-Search-Works">How Search works</a> </li>
