Added flexbox back to .nav-right .nav-items, display flex in header,made footer responsive and wrapped .footer-left, .footer-right, .footer-middle.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
     </div>
 </body>
 <footer>
-    <ul id="footer">
-        <li><a class="footer f1" href=" #Advertising">Advertising</a></li>
-        <li><a class="footer f2" href=" #Business">Business</a> </li>
-        <li><a class="footer f3" href=" #How-Search-Works">How Search works</a> </li>
-        <li><a class="footer f4" href=" #Carbon-Neutral">Carbon neutral since 2007</a> </li>
-        <li><a class="footer f5" href=" #Privacy">Privacy</a> </li>
-        <li><a class="footer f6" href=" #Terms">Terms</a> </li>
-        <li><a class="footer f7" href=" #Settings">Settings</a> </li>
+    <ul id="footer-nav">
+        <div class="footer-left">
+            <li><a class="footer f1" href=" #Advertising">Advertising</a></li>
+            <li><a class="footer f2" href=" #Business">Business</a> </li>
+            <li><a class="footer f3" href=" #How-Search-Works">How Search works</a> </li>
+        </div>
+        <div class="footer-middle">
+            <li><a class="footer f4" href=" #Carbon-Neutral">Carbon neutral since 2007</a> </li>
+        </div>
+        <div class="footer-right">
+            <li><a class="footer f5" href=" #Privacy">Privacy</a> </li>
+            <li><a class="footer f6" href=" #Terms">Terms</a> </li>
+            <li><a class="footer f7" href=" #Settings">Settings</a> </li>
+        </div>
     </ul>
 </footer>
