Edited .submit and added magnifying glass to search bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <br>
-        <div id="google-logo">
+        <div id="main">
             <header>
                 <img id="header-img"
                     src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
@@ -31,15 +31,20 @@
             </header>
             <form id="form-group">
 
-                <input type="text" name="text" class="search" placeholder="Search">
+                <input type="text" name="text" class="search" placeholder="">
                 <a href="#"> <img class="voice"
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png"
                         title="Search by Voice">
                 </a>
+                <img class="search-icon"
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Vector_search_icon.svg/111px-Vector_search_icon.svg.png"
+                    title="Search Icon">
+                </a>
                 <br>
-
-                <input type="submit" name="submit" class="submit" value="Google Search">
-                <input type="submit" name="feeling-lucky" class="submit" value="I'm Feeling Lucky">
+                <div id="submit">
+                    <input type="submit" name="submit" class="submit" value="Google Search">
+                    <input type="submit" name="feeling-lucky" class="submit" value="I'm Feeling Lucky">
+                </div>
             </form>
         </div>
 
